--- a/Configurator/MySQLConfigurator.csproj
+++ b/Configurator/MySQLConfigurator.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MySql.Configurator</RootNamespace>
     <AssemblyName>mysql_configurator</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <FileUpgradeFlags>
@@ -769,6 +769,8 @@
     <None Include="Resources\WizardSelection.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\TransparentSakilaLogo.png" />
+    <None Include="Resources\TransparentSakilaWhiteLogo.png" />
     <None Include="Resources\upgrade_logo.png" />
     <None Include="Resources\SplashScreen.png" />
     <None Include="Wizards\Scripts\UninstallEnterpriseFirewall.sql" />
