--- a/Configurator/Resources/my-template-8.x.ini
+++ b/Configurator/Resources/my-template-8.x.ini
@@ -186,7 +186,7 @@ default_authentication_plugin=caching_sha2_password
 # [VERSION_MIN]="8.0.27"
 # Administers multifactor authentication (MFA) capabilities. It applies to the authentication
 # factor-related clauses of CREATE USER and ALTER USER statements used to manage MySQL account
-# definitions, where “factor” corresponds to an authentication method or plugin associated
+# definitions, where "factor" corresponds to an authentication method or plugin associated
 # with an account.
 # [SERVER_AUTHENTICATION_POLICY]="authentication_policy"
 authentication_policy=*,,
@@ -235,7 +235,7 @@ log-bin=
 # ***** Group Replication Related *****
 # Specifies the server ID. For servers that are used in a replication topology,
 # you must specify a unique server ID for each replication server, in the
-# range from 1 to 2^32 − 1. “Unique” means that each ID must be different
+# range from 1 to 2^32 − 1. "Unique" means that each ID must be different
 # from every other ID in use by any other source or replica.
 # [SERVER_ID]="server_id"
 server-id=
@@ -298,8 +298,8 @@ temptable_max_ram=
 # [TMP_TABLE_SIZE]="tmp_table_size:min(tmp_table_size,temptable_max_ram)","USE_BYTES"
 tmp_table_size=
 
-# The storage engine for in-memory internal temporary tables (see Section 8.4.4, “Internal 
-# Temporary Table Use in MySQL”). Permitted values are TempTable (the default) and MEMORY.
+# The storage engine for in-memory internal temporary tables (see Section 8.4.4, "Internal 
+# Temporary Table Use in MySQL"). Permitted values are TempTable (the default) and MEMORY.
 internal_tmp_mem_storage_engine=TempTable
 
 #*** MyISAM Specific options
@@ -396,7 +396,7 @@ innodb_redo_log_capacity=
 # variable is intended for performance tuning on high concurrency systems.
 # InnoDB tries to keep the number of threads inside InnoDB less than or equal to 
 # the innodb_thread_concurrency limit. Once the limit is reached, additional threads 
-# are placed into a “First In, First Out” (FIFO) queue for waiting threads. Threads 
+# are placed into a "First In, First Out" (FIFO) queue for waiting threads. Threads 
 # waiting for locks are not counted in the number of concurrently executing threads.
 # [DEFAULT]="innodb_thread_concurrency:0"
 # [INNODB_THREAD_CONCURRENCY]="innodb_thread_concurrency:max(8,2*cpus+1)"
