--- a/Configurator/app.config
+++ b/Configurator/app.config
@@ -9,4 +9,8 @@
       <add address="*" maxconnection="10"/>
     </connectionManagement>
   </system.net>
+
+  <appSettings>
+    <add key="installationDirectory" value="C:\Program Files\MySQL\MySQL Server 8.1"/>
+  </appSettings>
 </configuration>
